[package]
name = "windows_nondefault_desktop"
version = "1.0.0"
description = """
Utility for applications that only work properly on the active Windows desktop.
"""
repository = "https://github.com/yasu256/windows_nondefault_desktop"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
]}

[dev-dependencies]
winit = "0.28.6"
